creusot/tests/should_fail/bug/specialize.coma
module M_specialize__f [#"specialize.rs" 21 0 21 17]
  let%span sspecialize0 = "specialize.rs" 24 20 24 25
  let%span sspecialize1 = "specialize.rs" 17 14 17 18
  
  use prelude.prelude.Opaque
  
  type t_NonNull'0  =
    { t_NonNull__pointer'0: opaque_ptr }
  
  type t_Unique'0  =
    { t_Unique__pointer'0: t_NonNull'0; t_Unique__qy95zmarker'0: () }
  
  use prelude.prelude.UIntSize
  
  type t_Cap'0  =
    { t_Cap__0'0: usize }
  
  type t_RawVec'0  =
    { t_RawVec__ptr'0: t_Unique'0; t_RawVec__cap'0: t_Cap'0; t_RawVec__alloc'0: () }
  
  type t_Vec'0  =
    { t_Vec__buf'0: t_RawVec'0; t_Vec__len'0: usize }
  
  let rec x'0 (self:t_Vec'0) (return'  (ret:()))= any
    [ return' (result:())-> {[%#sspecialize1] true} (! return' {result}) ]
    
  
  use prelude.prelude.Intrinsic
  
  meta "compute_max_steps" 1000000
  
  let rec f'0 (v:t_Vec'0) (return'  (ret:()))= (! bb0
    [ bb0 = s0 [ s0 = x'0 {v} (fun (_ret':()) ->  [ &_2 <- _ret' ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize0] false} s1 | s1 = bb2 ] 
    | bb2 = return' {_0} ]
    ) [ & _0 : () = any_l () | & v : t_Vec'0 = v | & _2 : () = any_l () ] 
    [ return' (result:())-> (! return' {result}) ]
    
end
module M_specialize__g [#"specialize.rs" 27 0 27 18]
  let%span sspecialize0 = "specialize.rs" 31 20 31 25
  let%span sspecialize1 = "specialize.rs" 27 8 27 9
  let%span sspecialize2 = "specialize.rs" 6 9 6 13
  let%span svec3 = "../../../../creusot-contracts/src/std/vec.rs" 66 20 66 41
  let%span svec4 = "../../../../creusot-contracts/src/std/vec.rs" 18 14 18 41
  let%span sseq5 = "../../../../creusot-contracts/src/logic/seq.rs" 388 8 388 97
  let%span sboxed6 = "../../../../creusot-contracts/src/std/boxed.rs" 28 8 28 18
  
  use prelude.prelude.Opaque
  
  type t_NonNull'0  =
    { t_NonNull__pointer'0: opaque_ptr }
  
  type t_Unique'0  =
    { t_Unique__pointer'0: t_NonNull'0; t_Unique__qy95zmarker'0: () }
  
  use prelude.prelude.UIntSize
  
  type t_Cap'0  =
    { t_Cap__0'0: usize }
  
  type t_RawVec'0  =
    { t_RawVec__ptr'0: t_Unique'0; t_RawVec__cap'0: t_Cap'0; t_RawVec__alloc'0: () }
  
  type t_Vec'0  =
    { t_Vec__buf'0: t_RawVec'0; t_Vec__len'0: usize }
  
  predicate inv'0 (_1 : t_Vec'0)
  
  use seq.Seq
  
  constant v_MAX'0 : usize = (18446744073709551615 : usize)
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.Int
  
  type t_T'0
  
  use seq.Seq
  
  function view'0 (self : t_Vec'0) : Seq.seq t_T'0
  
  axiom view'0_spec : forall self : t_Vec'0 . [%#svec4] Seq.length (view'0 self) <= UIntSize.to_int (v_MAX'0 : usize)
  
  predicate inv'1 (_1 : Seq.seq t_T'0)
  
  predicate invariant'0 (self : t_Vec'0) =
    [%#svec3] inv'1 (view'0 self)
  
  axiom inv_axiom'0 [@rewrite] : forall x : t_Vec'0 [inv'0 x] . inv'0 x = invariant'0 x
  
  use seq.Seq
  
  predicate inv'2 (_1 : t_T'0)
  
  predicate invariant'1 (self : Seq.seq t_T'0) =
    [%#sseq5] forall i : int . 0 <= i /\ i < Seq.length self  -> inv'2 (Seq.get self i)
  
  axiom inv_axiom'1 [@rewrite] : forall x : Seq.seq t_T'0 [inv'1 x] . inv'1 x = invariant'1 x
  
  predicate inv'3 (_1 : t_T'0)
  
  predicate invariant'2 (self : t_T'0) =
    [%#sboxed6] inv'3 self
  
  axiom inv_axiom'2 [@rewrite] : forall x : t_T'0 [inv'2 x] . inv'2 x = invariant'2 x
  
  let rec x'0 (self:t_Vec'0) (return'  (ret:()))= {[@expl:precondition] [%#sspecialize2] inv'0 self}
    any [ return' (result:())-> (! return' {result}) ] 
  
  use prelude.prelude.Intrinsic
  
  meta "compute_max_steps" 1000000
  
  let rec g'0 (v:t_Vec'0) (return'  (ret:()))= {[%#sspecialize1] inv'0 v}
    (! bb0
    [ bb0 = s0 [ s0 = x'0 {v} (fun (_ret':()) ->  [ &_2 <- _ret' ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize0] false} s1 | s1 = bb2 ] 
    | bb2 = return' {_0} ]
    ) [ & _0 : () = any_l () | & v : t_Vec'0 = v | & _2 : () = any_l () ] 
    [ return' (result:())-> (! return' {result}) ]
    
end
module M_specialize__h [#"specialize.rs" 34 0 34 17]
  let%span sspecialize0 = "specialize.rs" 37 20 37 25
  let%span sspecialize1 = "specialize.rs" 12 17 12 21
  let%span sspecialize2 = "specialize.rs" 11 14 11 19
  
  use prelude.prelude.Opaque
  
  type t_NonNull'0  =
    { t_NonNull__pointer'0: opaque_ptr }
  
  type t_Unique'0  =
    { t_Unique__pointer'0: t_NonNull'0; t_Unique__qy95zmarker'0: () }
  
  use prelude.prelude.UIntSize
  
  type t_Cap'0  =
    { t_Cap__0'0: usize }
  
  type t_RawVec'0  =
    { t_RawVec__ptr'0: t_Unique'0; t_RawVec__cap'0: t_Cap'0; t_RawVec__alloc'0: () }
  
  type t_Vec'0  =
    { t_Vec__buf'0: t_RawVec'0; t_Vec__len'0: usize }
  
  predicate inv'0 (_1 : t_Vec'0)
  
  axiom inv_axiom'0 [@rewrite] : forall x : t_Vec'0 [inv'0 x] . inv'0 x = true
  
  let rec x'0 (self:t_Vec'0) (return'  (ret:()))= {[@expl:precondition] [%#sspecialize1] inv'0 self}
    any [ return' (result:())-> {[%#sspecialize2] false} (! return' {result}) ] 
  
  use prelude.prelude.Intrinsic
  
  meta "compute_max_steps" 1000000
  
  let rec h'0 (v:t_Vec'0) (return'  (ret:()))= (! bb0
    [ bb0 = s0 [ s0 = x'0 {v} (fun (_ret':()) ->  [ &_2 <- _ret' ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize0] false} s1 | s1 = bb2 ] 
    | bb2 = return' {_0} ]
    ) [ & _0 : () = any_l () | & v : t_Vec'0 = v | & _2 : () = any_l () ] 
    [ return' (result:())-> (! return' {result}) ]
    
end
module M_specialize__qyi2463200954251793265__x__refines [#"specialize.rs" 12 4 12 22] (* <std::vec::Vec<U> as T> *)
  let%span sspecialize0 = "specialize.rs" 12 4 12 22
  let%span svec1 = "../../../../creusot-contracts/src/std/vec.rs" 66 20 66 41
  let%span svec2 = "../../../../creusot-contracts/src/std/vec.rs" 18 14 18 41
  let%span sseq3 = "../../../../creusot-contracts/src/logic/seq.rs" 388 8 388 97
  let%span sboxed4 = "../../../../creusot-contracts/src/std/boxed.rs" 28 8 28 18
  
  use prelude.prelude.Opaque
  
  type t_NonNull'0  =
    { t_NonNull__pointer'0: opaque_ptr }
  
  type t_Unique'0  =
    { t_Unique__pointer'0: t_NonNull'0; t_Unique__qy95zmarker'0: () }
  
  use prelude.prelude.UIntSize
  
  type t_Cap'0  =
    { t_Cap__0'0: usize }
  
  type t_RawVec'0  =
    { t_RawVec__ptr'0: t_Unique'0; t_RawVec__cap'0: t_Cap'0; t_RawVec__alloc'0: () }
  
  type t_Vec'0  =
    { t_Vec__buf'0: t_RawVec'0; t_Vec__len'0: usize }
  
  predicate inv'0 (_1 : t_Vec'0)
  
  use seq.Seq
  
  constant v_MAX'0 : usize = (18446744073709551615 : usize)
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.Int
  
  type t_U'0
  
  use seq.Seq
  
  function view'0 (self : t_Vec'0) : Seq.seq t_U'0
  
  axiom view'0_spec : forall self : t_Vec'0 . [%#svec2] Seq.length (view'0 self) <= UIntSize.to_int (v_MAX'0 : usize)
  
  predicate inv'1 (_1 : Seq.seq t_U'0)
  
  predicate invariant'0 (self : t_Vec'0) =
    [%#svec1] inv'1 (view'0 self)
  
  axiom inv_axiom'0 [@rewrite] : forall x : t_Vec'0 [inv'0 x] . inv'0 x = invariant'0 x
  
  use seq.Seq
  
  predicate inv'2 (_1 : t_U'0)
  
  predicate invariant'1 (self : Seq.seq t_U'0) =
    [%#sseq3] forall i : int . 0 <= i /\ i < Seq.length self  -> inv'2 (Seq.get self i)
  
  axiom inv_axiom'1 [@rewrite] : forall x : Seq.seq t_U'0 [inv'1 x] . inv'1 x = invariant'1 x
  
  predicate inv'3 (_1 : t_U'0)
  
  predicate invariant'2 (self : t_U'0) =
    [%#sboxed4] inv'3 self
  
  axiom inv_axiom'2 [@rewrite] : forall x : t_U'0 [inv'2 x] . inv'2 x = invariant'2 x
  
  goal refines : [%#sspecialize0] forall self : t_Vec'0 . inv'0 self  -> inv'0 self
end
module M_specialize__qyi7277341344010858608__x__refines [#"specialize.rs" 18 4 18 14] (* <std::vec::Vec<u32> as T> *)
  let%span sspecialize0 = "specialize.rs" 18 4 18 14
  
  goal refines : [%#sspecialize0] true
end
